# harbour-rust-example

./: .gitignore  Cargo.toml  README.md  build.rs  harbour-rust-example.desktop  harbour-rust-example.pro  symbols.config
.github/workflows/: build.yml
rpm/: harbour-rust-example.spec
sailfishapp/: Cargo.toml
sailfishapp/src/: lib.rs
src/: exampleobj.rs  main.rs
